# original-metaplex-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .versionrc.js  CHANGELOG.md  README.md  conftest.py  pyproject.toml  pytest.ini  setup.py
original_metaplex_python/: __pkg__.py  app.py  app_context.py
original_metaplex_python/metaplex/rpc_module/: rpc_client.py
original_metaplex_python/tests/: conftest.py
original_metaplex_python/tests/e2e/: test_create_update_flow.py  test_create_update_transfer_burn_flow.py  test_create_with_delegate_flow.py
src/: app_context.py
src/metaplex/: metaplex.py
src/metaplex/core_plugins/: plugin.py
src/metaplex/errors/: sdk_error.py
src/metaplex/identity_module/: identity_driver.py
src/metaplex/irys_storage/: irys_storage_driver.py
src/metaplex/keypair_identity/: keypair_identity_driver.py
src/metaplex/nft_module/: authorization.py  delegate_input.py  nft_pdas_client.py  plugin.py
src/metaplex/nft_module/models/: json_metadata.py  (+4 more)
src/metaplex/operation_module/: operation_client.py  plugin.py
src/metaplex/program_module/: plugin.py  program_client.py
src/metaplex/rpc_module/: plugin.py  rpc_client.py
src/metaplex/storage_module/: metaplex_file.py  plugin.py  storage_client.py
src/metaplex/system_module/: plugin.py  system_builders_client.py  system_client.py
src/metaplex/token_module/: plugin.py  program.py  token_client.py  token_pdas_client.py
src/metaplex/types/: account.py  creator.py  operation.py
src/metaplex/utils/: transaction_builder.py
src/tests/e2e/: test_create_update_transfer_burn_flow.py
(+22 files in other folders)
